kubernetes/prod/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: solana-sign-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: solana-sign-service
