kubernetes/prod/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - secrets.wayru.tech
      secretName: sign-service-tls
  rules:
    - host: secrets.wayru.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solana-sign-service
                port:
                  number: 80
